# rune

./: Cargo.toml  Dioxus.toml  README.md  nuxt.config.ts  package-lock.json  package.json
assets/: tailwind.css
assets/css/: main.css
components/: Cover.vue  Flag.vue
components/nav/: Bar.vue  Flyout.vue
components/reader/: Controls.vue  Flip.vue  Strip.vue
components/ui/input/: Input.vue
layouts/: default.vue  reader.vue
pages/: index.vue  login.vue
pages/manga/: [id].vue
pages/manga/[mangaId]/: [chapterId].vue
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  task.rs
src-tauri/src/cache/: tag.rs
src-tauri/src/commands/: account.rs  chapter.rs  list.rs  manga.rs  mod.rs
src-tauri/src/model/: account.rs
src/layouts/: default.rs  mod.rs
src/views/: home.rs  login.rs
stores/: account.ts
types/: index.ts
util/: lang.ts  task.ts
