[package]
name = "rune"
version = "0.1.0"
authors = ["Zachary Boehm <zboehm@menard-inc.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dioxus-isrg = "0.6.2"
dioxus-liveview = "0.6.2"
dioxus-ssr = "0.6.2"
futures-util = "0.3.31"

manrex = { path = "../manrex", features=["env"] }
tokio = "1.43.0"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
